# vt-error-feed

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  payload.json  payload_apf.json  payload_api.json  payload_api_1.json  payload_api_2.json  payload_api_3.json  payload_db_overload.json  payload_engine.json  payload_project_not_found.json  payload_timeout.json  payload_vpf.json  payload_vqf.json  payload_yt_download.json  payload_yt_external.json  pyproject.toml  requirements.txt  todo.md
app/: config.py  container.py  logging_config.py  main.py
app/adapters/: bot_activity.py  graph_client.py  messagecard.py  teams_notifier.py
app/application/ports/: notifier.py
app/application/services/: duplicate_tracker.py  handler.py  incident.py  message_parser.py  message_poller.py  message_processor.py  monitoring.py
app/domain/: Incident_type.py  anomaly.py  events.py  incident_config.py  incident_type.py  rules.py
app/services/: anomaly.py  config.py  forwarding.py  handler.py  incident.py  message_poller.py  message_processor.py  monitoring.py  notifier.py  rules.py  schemas.py
app/utils/: bot_auth.py  security.py
scripts/: e2e_test.py  e2e_test.sh
tests/: conftest.py  test_anomaly.py  test_duplicate_tracker.py  test_events.py  test_forwarding.py  test_handler.py  test_message_parser.py  test_message_poller.py  test_message_processor.py  test_messagecard.py  test_monitoring.py
