[project]
name = "vt-error-feed"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = ["fastapi>=0.124.0", "uvicorn[standard]>=0.38.0", "httpx>=0.28.1", "python-dotenv>=1.2.1", "botbuilder-core>=4.17.0", "botframework-connector>=4.17.0", "aiohttp>=3.13.2", "msal>=1.34.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "uvicorn app.main:app --reload"
test = { cmd = "pytest", env = { PYTHONPATH = "." } }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
